--- a/MrKeeplearning/python_review/참고자료.md
+++ b/MrKeeplearning/python_review/참고자료.md
@@ -24,6 +24,34 @@ for _ in range(5):
 
 <br/>
 
+### range 함수와 enumerate 함수
+
+**range()**
+- for문과 함께 잘 쓰임
+- 입력받은 숫자에 해당되는 범위의 값을 반복 가능한 객체로 만들어 리턴
+
+```python
+# range(start, stop, step): start부터 step씩 증감, stop-1까지의 정수
+print(list(range(1, 11, 2)))
+
+>>>> [1, 3, 5, 7, 9]
+```
+
+**enumerate()**
+- 리스트가 있는 경우 순서와 리스트의 값을 전달하는 기능을 가짐
+- 순서가 있는 자료형(list, set, tuple, dictionary, string)을 입력으로 받아 인덱스 값을 포함하는 enumerate 객체를 리턴
+
+```python
+data = enumerate({1, 2, 3})
+for i, value in data:
+    print(i, ":", value)
+print()
+
+>>>> 0 : 1
+>>>> 1 : 2
+>>>> 2 : 3
+```
+
 ### 리스트 관련 메서드
 
 | **메서드명**      | **사용법**                        | **설명**                                       | **시간 복잡도** |
