--- a/LeeJaeIk1996/honeytips/파이썬 연구소.md
+++ b/LeeJaeIk1996/honeytips/파이썬 연구소.md
@@ -22,6 +22,8 @@ class Solution2:
             hash_table[n] = i  
 ```
 
+- 문제 예시 : [leetcode 1번 문제 - two sum](https://leetcode.com/problems/two-sum/)
+
 ---
 
 ## 📌 zip() 함수
@@ -58,3 +60,31 @@ dict(zip(numbers, fruits))
 - **defaultdict의 인자 값은 int, set, list를 받을 수 있다.**
 
 - 기존의 딕셔너리는 존재하지 않는 키 값을 출력할 경우 에러가 발생한다. 하지만 defaultdict()의 경우 자동으로 디폴트 값이 들어간다.
+
+---
+
+## 📌 index() 함수 - 배열에서 원하는 값의 위치
+
+- index(): 배열에서 **값의 위치(인덱스)를 찾아주는** 함수
+
+- 중복된 값이 있을 경우 **가장 최소의 위치를 반환**
+
+- 💡 **index(value, start, end)** 또는 **index(value, start)** 를 통해 시작점(start) 혹은 끝점(end)을 지정할 수도 있다.
+
+- 문제 예시 : [leetcode 1번 문제 - two sum](https://leetcode.com/problems/two-sum/)
+
+---
+
+## 📌 typing 정리 - from typing import *
+
+1. from typing import Optional
+
+    - **None을 허용하는 타입.**
+
+    - 파이썬이 아닌 다른 언어에서 Nullable과 대응된다고 볼 수 있다.
+    
+    - 변수에 None이 들어올 수도 있다면 Optional을 선언하여 사용한다.
+
+    - Optional[int]는 **int 또는 None을 나타낸다.**
+
+    - 문제 예시: [leetcode 105번 문제 - Construct Binary Tree from Preorder and Inorder Traversal](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
